--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Concept &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+	<title>visitsrilankaone.com</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -57,13 +57,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2 text-left">
-					<div id="fh5co-logo"><a href="index.html">VISITCEYLON<span>.</span></a></div>
+					<div id="fh5co-logo"><a href="index.html">VISITSRILANKAONE<span>.</span></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li class="active"><a href="index.html">Information</a></li>
-						<li><a href="products.html">About Us</a></li>
+						<li class="active"><a href="index.html">Home</a></li>
+						<!--
 						<li><a href="about.html">Where to Go</a></li>
+						-->
 						<li class="has-dropdown">
 							<a href="services.html">Tour Packages</a>
 							<ul class="dropdown">
@@ -75,6 +76,20 @@
 								<li><a href="#">Mini Tour</a></li>
 							</ul>
 						</li>
+						<!--
+						<li class="has-dropdown">
+							<a href="services.html">Services</a>
+							<ul class="dropdown">
+								<li><a href="#">Web Design</a></li>
+								<li><a href="#">eCommerce</a></li>
+								<li><a href="#">Branding</a></li>
+								<li><a href="#">API</a></li>
+							</ul>
+						</li>
+						-->
+						<li><a href="products.html">Products</a></li>
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="about.html">About Us</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
@@ -83,14 +98,14 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/tours.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7 text-left">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeInUp">
-							<h1 class="mb30">Let us welcome you to the world's most beautiful country...</h1>
+							<h1 class="mb30">welcome to visitsrilankaone tours...</h1>
 							<p>
 								<a href="" target="_blank" class="btn btn-primary">Plans</a>  <em class="or">or</em>
 								<a href="https://www.youtube.com/watch?v=u2tCfREsubI" class="link-watch popup-vimeo">Watch Video</a>
@@ -179,7 +194,7 @@
 				<div class="col-md-8 col-md-offset-2 text-left animate-box" data-animate-effect="fadeInUp">
 					<div class="fh5co-heading">
 						<span>We're expert</span>
-						<h2>Visit SriLanka Tours</h2>
+						<h2>Visit SriLanka One</h2>
 						<p>The Home of great value Sri Lanka travel packages, Sri Lanka tours, vacations and holidays in Sri Lanka.</p>
 					</div>
 				</div>
@@ -190,8 +205,8 @@
 						<span class="icon">
 							<i class="icon-eye"></i>
 						</span>
-						<h3>Since 2005</h3>
-						<p>Over 10 years of experience in the tourism industry.</p>
+						<h3>Since 2015</h3>
+						<p>Over 1 years of experience in the tourism industry.</p>
 						<p>Team of experts in the travel industry</p>
 						<!--<p><a href="#">Learn more</a></p>-->
 					</div>
@@ -229,8 +244,8 @@
 							<i class="icon-eye"></i>
 						</span>
 						<h3>24/7 Support</h3>
-						<p>24/7 emergency contact number</p>
-						<p>support@visitceylon.net</p>
+						<p>24/7 emergency contact number <br>0094 71 123 1234</p>
+						<p>support@visitsrilankaone.com</p>
 					</div>
 				</div>
 				<div class="clearfix visible-sm-block"></div>
@@ -420,8 +435,8 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
-						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://pixeden.com/" target="_blank">Pixeden</a> &amp; <a href="http://unsplash.com/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2016 crystal_code_solutions. All Rights Reserved.</small>
+						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">crystalcodesolutions.com</a> Demo Images: <a href="http://pixeden.com/" target="_blank">Pixeden</a> &amp; <a href="http://unsplash.com/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
