--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Concept &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+	<title>visitsrilankaone.com</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -63,6 +63,18 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li class="has-dropdown">
+							<a href="services.html">Tour Packages</a>
+							<ul class="dropdown">
+								<li><a href="#">Land like no other</a></li>
+								<li><a href="#">Wonder of Asia</a></li>
+								<li><a href="#">Small Miracle</a></li>
+								<li><a href="#">Refreshingly Sri Lanka</a></li>
+								<li><a href="#">Amazing Sri Lanka</a></li>
+								<li><a href="#">Mini Tour</a></li>
+							</ul>
+						</li>
+						<!--
+						<li class="has-dropdown">
 							<a href="services.html">Services</a>
 							<ul class="dropdown">
 								<li><a href="#">Web Design</a></li>
@@ -71,10 +83,11 @@
 								<li><a href="#">API</a></li>
 							</ul>
 						</li>
+						-->
 
 						<li class="active"><a href="products.html">Products</a></li>
-						<li><a href="about.html">About</a></li>
 						<li><a href="blog.html">Blog</a></li>
+						<li><a href="about.html">About Us</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
