--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 						</li>
 						-->
 
-						<li><a href="products.html">Products</a></li>
+						<li><a href="products.html">Recent Tours</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li class="active"><a href="about.html">About Us</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -96,7 +96,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/22-travel-blogs-to-follow-in-2016.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
