--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 						</li>
 						-->
 
-						<li><a href="products.html">Products</a></li>
+						<li><a href="products.html">Recent Tours</a></li>
 						
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About Us</a></li>
@@ -97,7 +97,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/ContactUs1.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
