--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</ul>
 						</li>
 						-->
-						<li><a href="products.html">Products</a></li>
+						<li><a href="products.html">Recent Tours</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="contact.html">Contact</a></li>
