--- a/products.html
+++ b/products.html
@@ -85,7 +85,7 @@
 						</li>
 						-->
 
-						<li class="active"><a href="products.html">Products</a></li>
+						<li class="active"><a href="products.html">Recent Tours</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -103,7 +103,7 @@
 				<div class="col-md-7 text-left">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeInUp">
-							<h1 class="mb30">Our Creative Products</h1>
+							<h1 class="mb30">Our Tours so far...</h1>
 						</div>
 					</div>
 				</div>
