--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 	<meta name="twitter:card" content="" />
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -49,15 +49,15 @@
 
 	</head>
 	<body>
-		
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2 text-left">
-					<div id="fh5co-logo"><a href="index.html">Concept<span>.</span></a></div>
+					<div id="fh5co-logo"><a href="index.html">VISITSRILANKAONE<span>.</span></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
@@ -86,14 +86,14 @@
 						-->
 
 						<li><a href="products.html">Recent Tours</a></li>
-						
+
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About Us</a></li>
 						<li class="active"><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
-			
+
 		</div>
 	</nav>
 
@@ -112,13 +112,13 @@
 		</div>
 	</header>
 
-	
+
 
 	<div id="fh5co-contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-5 col-md-push-1 animate-box">
-					
+
 					<div class="fh5co-contact-info">
 						<h3>Contact Information</h3>
 						<ul>
@@ -168,15 +168,15 @@
 							<input type="submit" value="Send Message" class="btn btn-lg btn-primary">
 						</div>
 
-					</form>		
+					</form>
 				</div>
 			</div>
-			
+
 		</div>
 	</div>
 
 
-	
+
 	<div id="fh5co-started">
 		<div class="container">
 			<div class="row animate-box">
@@ -232,7 +232,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
+						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://pixeden.com/" target="_blank">Pixeden</a> &amp; <a href="http://unsplash.com/" target="_blank">Unsplash</a></small>
 					</p>
 					<p>
@@ -253,7 +253,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -274,4 +274,3 @@
 
 	</body>
 </html>
-
